--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+aiofiles==22.1.0
+aiosqlite==0.19.0
 anyio==3.7.1
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+arrow==1.2.3
 attrs==23.1.0
+Babel==2.14.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
+cached-property==1.5.2
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -18,6 +23,7 @@ exceptiongroup==1.1.3
 fastjsonschema==2.18.0
 filelock==3.12.2
 fonttools==4.38.0
+fqdn==1.5.1
 fsspec==2023.1.0
 funcy==2.0
 future==0.18.3
@@ -29,14 +35,23 @@ importlib-resources==5.12.0
 ipykernel==6.16.2
 ipython==7.29.0
 ipython-genutils==0.2.0
+isoduration==20.11.0
 jedi==0.19.0
 Jinja2==3.1.2
 joblib==1.3.2
+json5==0.9.16
+jsonpointer==2.4
 jsonschema==4.17.3
-jupyter-client==7.4.9
-jupyter-core==4.12.0
+jupyter-events==0.6.3
 jupyter-server==1.24.0
+jupyter-ydoc==0.2.5
+jupyter_client==7.4.9
+jupyter_core==4.12.0
+jupyter_server_fileid==0.9.1
+jupyter_server_ydoc==0.8.0
+jupyterlab==3.6.7
 jupyterlab-pygments==0.2.2
+jupyterlab_server==2.24.0
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib==3.2.2
@@ -49,7 +64,7 @@ nbformat==5.8.0
 nest-asyncio==1.5.7
 nltk==3.7
 notebook==6.5.5
-notebook-shim==0.2.3
+notebook_shim==0.2.3
 numexpr==2.8.5
 numpy==1.21.6
 packaging==23.1
@@ -59,7 +74,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
-pkgutil-resolve-name==1.3.10
+pkgutil_resolve_name==1.3.10
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
 psutil==5.9.5
@@ -70,11 +85,14 @@ pyLDAvis==3.3.1
 pyparsing==3.1.1
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-json-logger==2.0.7
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==24.0.1
 regex==2023.8.8
 requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 sacremoses==0.0.53
 scikit-learn==1.0.2
 scipy==1.7.3
@@ -91,16 +109,21 @@ terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
 tokenizers==0.12.1
+tomli==2.0.1
 torch==1.10.2
 torchvision==0.14.1
 tornado==6.2
 tqdm==4.66.1
 traitlets==5.9.0
 transformers==4.18.0
-typing-extensions==4.7.1
+typing_extensions==4.7.1
+uri-template==1.3.0
 urllib3==2.0.4
 wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.1
 wordcloud==1.8.1
+y-py==0.6.2
+ypy-websocket==0.8.4
 zipp==3.15.0
